# aruba-ssid-manager

./: .gitignore  CHANGELOG.md  CODE_REVIEW.md  CONTRIBUTING.md  README.md  aruba_ssid_configurator.py  pexpect_aruba_add_hidden_ssid.py  pyproject.toml  requirements.txt  version_bumper.py
.github/workflows/: ci.yml  release-please.yml  release.yml
_legacy/v0.1.0/: CHANGELOG.md  README.md  aruba_ssid_tool.py
archive/legacy_scripts/: pexpect_aruba_add_ssid.py
aruba_ssid_manager/: _version.py
docs/: api.md  architecture.md  contributing.md  deployment.md  troubleshooting.md
scripts/: smoke.sh
src/aruba_ssid_configurator/: __init__.py  __main__.py  cli.py  configurator.py
src/aruba_ssid_manager/: __init__.py  __main__.py  cli.py  configurator.py
tests/: conftest.py  test_aruba_ssid_configurator.py  test_aruba_ssid_manager.py
