[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aruba-ssid-manager"
version = "1.2.0"
description = "Configure visible or hidden SSIDs on an Aruba controller via SSH."
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [
  { name = "Kris Armstrong" }
]
dependencies = [
  "pexpect>=4.8",
]

[project.scripts]
aruba-ssid-manager = "aruba_ssid_manager.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
